# comic_draft_ai_platform

./: .gitignore  AGENT_DESIGN.md  LOCAL_SETUP.md  PROBLEMS.md  README.md  docker-compose.yml  package-lock.json  package.json
agent/: .env.example  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  test_agent_local.py  test_agents.py  worker.py
agent/.bedrock_agentcore/draft_agent/: Dockerfile
agent/core/: adapters.py  graph.py  knowledge.py  models.py  nodes.py  prompts.py  supervisor.py  telemetry.py  utils.py
agent/core/knowledge/: __init__.py  canonical_store.py  character_manager.py  manager.py  scenery_manager.py  style_manager.py  utils.py
agent/core/node_handlers/: __init__.py  balloons.py  image_generation.py  ingestion.py  layout.py  merge.py  planning.py  world_model.py
backend/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/apps/projects/: agent_utils.py  models.py  result_processor.py  views.py
backend/apps/projects/migrations/: 0001_initial.py  0002_panel_status.py  0003_add_enhanced_fields.py  0004_add_panel_layout.py  0005_project_status_error.py  0006_character_scenery.py  0007_character_metadata_project_style_guide_and_more.py  0008_remove_character_image_url_and_more.py  0009_alter_character_image_alter_page_merged_image_and_more.py  0010_project_layout_style_project_max_pages_and_more.py  0011_remove_project_layout_style_remove_project_max_pages_and_more.py  0012_project_layout_style_project_max_pages_and_more.py  0013_panel_panel_style_panel_reference_image.py  0014_alter_character_image_alter_page_merged_image_and_more.py  0015_project_world_model_summary.py  0016_referenceimage.py  (+1 more)
backend/core_project/: settings.py  urls.py  wsgi.py
backend/nginx/conf.d/: default.conf
(+12 files in other folders)
