[project]
name = "comic-draft-agent"
version = "0.1.0"
description = "Agente de IA para el borrador de cómics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "flask-cors",
    "python-dotenv",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langchain-text-splitters",
    "langgraph",
    "pydantic",
    "requests",
    "boto3",
    "celery[redis]",
    "redis",
    "chromadb",
    "pypdf",
    "docx2txt",
    "tiktoken",
    "pillow>=12.1.0",
    "langchain-google-genai>=4.2.0",
    "google-genai>=1.62.0",
    "bedrock-agentcore>=1.2.1",
    "bedrock-agentcore-starter-toolkit>=0.2.10",
    "aws-opentelemetry-distro>=0.15.0",
]

[tool.uv]
dev-dependencies = [
    "pytest",
]
